# thermal-engine

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: batiment_mixte_lyon.geojson
src/thermal_engine/: __init__.py
src/thermal_engine/climate/: epw_models.py  epw_parser.py
src/thermal_engine/core/: geometry.py  schedules.py  solar.py  systems.py  thermal.py  ventilation.py
src/thermal_engine/data/: material_db.py  thermal_bridges_db.py
src/thermal_engine/io/: geojson_loader.py  report_builder.py
src/thermal_engine/models/: building.py  energy_systems.py  materials.py
src/thermal_engine/simulation/: needs.py  renovation.py
tests/: test_geometry.py  test_materials.py  test_simulation.py  test_solar.py  test_thermal.py
