[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-engine"
version = "0.1.0"
description = "Physics-based thermal engine for building energy analysis — ISO 13790, EPW, multi-zone GeoJSON"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Maxime Grelet" }]
requires-python = ">=3.11"
keywords = ["building", "energy", "thermal", "ISO13790", "DPE", "EPW", "renovation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.urls]
Repository = "https://github.com/MaximeGRELET/thermal-engine"
Issues     = "https://github.com/MaximeGRELET/thermal-engine/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
src        = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle + pyflakes + isort
ignore = ["E501"]
